--- a/D2/main.tex
+++ b/D2/main.tex
@@ -84,7 +84,7 @@ This document provides a high level overview of the DealCheck system architectur
 % Begin SubSection
 The overall DealCheck system follows a Blackboard (BB) style architecture, with various subsystems adopting either a BB or repository style design architecture.
 The BB architecture supports multiple agents or "experts" that contribute toward the evaluation of car deals, with each agent operating independently to add insights to the shared Blackboard, which acts as the central repository of knowledge.
-Additionally, the repository style design architecture is used for subsystems that require concurrent access to data, particularly in areas like account management. This architecture is specialized for handling high-complexity data processing, ensuring that user account information and car valuation reports are securely and efficiently managed in DealCheck.
+Additionally, the repository style design architecture is used for subsystems that require concurrent access to data, particularly in areas like account management. This architecture is specialized for handling high-complexity data processing, ensuring that user account information and car evaluation reports are securely and efficiently managed in DealCheck.
 % End SubSection
 
 \subsection{Overview}
