--- a/D2/main.tex
+++ b/D2/main.tex
@@ -762,6 +762,7 @@ This section should contain all of your CRC cards.
             \item Logout (Boundary).
             \item Account Success (Boundary).
         \end{itemize}
+    \item Reviewed Class Responsibility Cards to ensure that they match Analysis Class Diagram.
     \begin{center}
         \includegraphics[scale=0.1]{abdallah.jpg}
     \end{center}
