--- a/D2/main.tex
+++ b/D2/main.tex
@@ -673,15 +673,15 @@ This section should contain all of your CRC cards.
 
 \subsection{Rebecca Di Filippo}
 \begin{itemize}
-    \item Wrote Section 1.1
-    \item Wrote Section 1.2
-    \item Wrote Section 1.3
+    \item Wrote Section 1.1: Purpose of Document
+    \item Wrote Section 1.2: System Description
+    \item Wrote Section 1.3: Overview of Document
     \item Contributed 4 Class Responsibility Cards
     \begin{itemize}
-        \item Registration (RD)
-        \item Login (RD)
-        \item Account Information (RD)
-        \item View Account (RD)
+        \item Registration
+        \item Login
+        \item Account Information
+        \item View Account
     \end{itemize}
     \begin{center}
         \includegraphics[scale=0.7]{rebecca.png}
