main.tex further changes 3/7/25

--- a/D2/main.tex
+++ b/D2/main.tex
@@ -83,7 +83,7 @@ This document provides a high level overview of the DealCheck system architectur
 \label{sub:system_description}
 % Begin SubSection
 The overall DealCheck system follows a Blackboard (BB) style architecture, with various subsystems adopting either a BB or repository style design architecture.
-The BB architecture supports multiple agents or "experts" that contribute toward the evaluation of car deals, with each agent operating independently to add insights to the shared Blackboard, which acts as the central repository of knowledge.
+The BB architecture supports multiple agents or "experts" that contribute toward the evaluation of car deals, with each agent operating independently to add insights to the shared Blackboard, which acts as the central data store.
 Additionally, the repository style design architecture is used for subsystems that require concurrent access to data, particularly in areas like account management. This architecture is specialized for handling high-complexity data processing, ensuring that user account information and car valuation reports are securely and efficiently managed in DealCheck.
 % End SubSection
 
@@ -130,7 +130,7 @@ This section should provide an overview of the overall architectural design of y
 	\item List any design alternatives you considered, but eliminated (and explain why you eliminated them)
 \end{itemize}
 
-DealCheck will utilize a Data-Centered architecture, namely the Blackboard architecture style. The system's core functionality is accessed through the System Controller via the Client Access Agent. The Client Access Agent will control the user interface of the application. The System Controller will act as the central ‘data store’ used in Blackboard architecture, while each of the subsystems described below will act as the ‘knowledge sources.’ These include the Car Recommendation Agent, the User Accounts Agent, and the Car Deal Checker Agent. \\
+DealCheck will utilize a Data-Centered architecture, namely the Blackboard architecture style. The system’s core functionality is accessed through the System Controller, via the Client Access Agent. The Client Access Agent will control the user interface of the application. The System Controller will act as the central ‘data store’ used in Blackboard architecture, while each of the subsystems described below will act as the ‘knowledge sources’. These include the Car Recommendation Agent, the User Accounts Agent, and the Car Deal Checker Agent. \\
 
 The following table summarizes the purpose and architectural style of each subsystem:
 \FloatBarrier
@@ -160,18 +160,17 @@ This system will also employ four databases:
     \item The \textbf{System Data Store} will act as the central data store for the entire application.
 \end{itemize}
 
-DealCheck's architecture utilizes both the Repository and Blackboard systems. The overall system employs the Blackboard architecture since it enables separation of application components (as shown in Table \ref{tab:dealcheck_subsystems}), allowing them to function independently. The system data store also houses application-wide data, including user interface details and request information. This central data store invokes the correct subsystems based on the request. \\
+DealCheck’s architecture utilizes both the Repository and Blackboard systems. For the overall system, the Blackboard architecture is used since it will allow for separation of application components (see the above subsystems) that may each independently work within the application. The system data store will also store application wide data, including user interface information and user request information. This central data store will invoke the correct subsystems based on the request. \\
 
-Blackboard is particularly suitable for the information request management subsystem because vehicle valuation lacks a single correct answer. Multiple knowledge sources must be consulted and integrated to generate a high-quality response. This aligns with the Blackboard style, where the data store is active and calls upon relevant knowledge sources to process a query. The Blackboard approach was preferred over Batch Sequential and Repository due to the non-deterministic nature of vehicle deal evaluations, which benefit from multiple consulted agents. \\
+Blackboard is also used in the information request management subsystem. This is because there is not one universally correct answer for the valuation of a vehicle. Therefore, multiple knowledge sources must be consulted and integrated together to provide a quality response. This aligns with the Blackboard style, where the data store is active and calls upon the relevant knowledge sources to answer a query. This was chosen over other architectural systems such as Batch Sequential and Repository due to the problem’s structure. Rating of a vehicle deal is non-deterministic and yields the best results when multiple agents are consulted, therefore Blackboard is the optimal choice.\\
 
-The Repository architecture is employed for the Account Management system, as it is commonly used in database management applications requiring frequent data modifications. Unlike the Blackboard system, which actively calls knowledge sources, the Repository architecture features a passive data store, making it ideal for account management tasks performed by users. Other data-centered architectures like Blackboard were unsuitable because account management does not involve solving non-deterministic problems. Data Flow architectures were also not selected, as this system does not rely on sequential data transformations. The Repository model's key strength is ensuring data integrity, which is essential for securing sensitive user information such as usernames and passwords. \\
+The second architecture style used in this application is Repository. This style is frequently used in database management systems, where frequent modification to data is required. This is similar to the needs of the Account Management System. Additionally, the data store is passive rather than active, which is suitable for the account management system which will only be modified by the clients accessing. The repository style was chosen over other data-centered architectures such as blackboard, which is more suited for solving non-deterministic problems. This is not the case, therefore the repository is used. Data Flow architectures were also not selected since this system’s activities are not a series of transformations on data sets. Returning to the benefits of the repository, a key strength is its well-suitedness for applications needing data integrity. This is a top priority of an account management system, since sensitive data such as usernames and passwords must be secure and maintain a high level of integrity.\\
 
-We considered the Batch Sequential approach from the Data Flow architecture to handle car deal requests, where a user submits a request and DealCheck processes it through the Deal Report Management system. However, this approach was unsuitable because the system requires real-time responses, whereas batch processing introduces delays. Users expect instant feedback on deal evaluations, making batch cycles impractical. Furthermore, Batch Sequential has low throughput due to its rigid, sequential steps, making it inefficient for a multi-user application. \\
+We considered using Batch Sequential from the data flow architecture to handle car deal requests, where a user submits a request and DealCheck processes it through the Deal Report Management system. However, this approach was not suitable since the system requires real-time responses, whereas batch processing introduces delays. Users expect instant feedback on deal evaluations, and waiting for a batch cycle would be impractical. Additionally, Batch Sequential has low throughput due to its rigid, sequential processing steps, making it inefficient for an application with multiple users.\\
 
-Another alternative explored was Pipes and Filters for the Deal Report Management subsystem. However, this architecture lacks the flexibility required for non-deterministic car deal evaluations. Different deals may require varying types of analysis depending on user input and consulted experts, making a fixed sequence of processing steps suboptimal. Pipes and Filters work best for structured data transformations, whereas DealCheck's subsystems require dynamic data integration from multiple sources, making this architecture unsuitable. \\
+Another alternative we explored was Pipes and Filters for the Deal Report Management subsystem. However, this architecture lacks the flexibility needed for non-deterministic car deal evaluations. Since different deals may require varying types of analysis depending on the input and expert consulted, a fixed sequence of steps would not be ideal. Pipes and Filters work best for structured data transformations, whereas DealCheck's subsystems require dynamic data integration from multiple sources, which this architecture is not well-suited for.\\
 
-We also considered the Process-Control architecture but ultimately eliminated it because it is designed for continuous monitoring and real-time feedback loops, such as temperature regulation systems. DealCheck, however, operates on user-initiated queries rather than ongoing system monitoring, making Process-Control unnecessary for this application. \\
-
+We also considered the Process-Control architecture but ultimately eliminated it because it is designed for continuous monitoring and real-time feedback loops, such as temperature regulation systems. Since DealCheck operates on user-initiated queries, rather than ongoing system monitoring, Process-Control was unnecessary for this application.\\
 % End SubSection
 
 \subsection{Subsystems}
